--- a/Accounting/appsettings.json
+++ b/Accounting/appsettings.json
@@ -4,12 +4,12 @@
     "HangfireConneciton": "Data Source=.;Initial Catalog =Hangfire;Integrated Security=True"
   },
   "EmailConfig": {
-    "Email": "reza.mohamadzadeh7@gmail.com",
+    "Email": "",
     "Port": "587",
     "Ssl": "True",
     "Title": "",
     "smtp": "smtp.gmail.com",
-    "Pass": "ShayadBiayad"
+    "Pass": ""
   },
   "Logging": {
     "LogLevel": {
