--- a/Accounting/Accounting.csproj
+++ b/Accounting/Accounting.csproj
@@ -5,6 +5,25 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="wwwroot\fonts\Poppins\Poppins-Black.woff2" />
+    <None Include="wwwroot\fonts\Poppins\Poppins-Bold.woff2" />
+    <None Include="wwwroot\fonts\Poppins\Poppins-Light.woff2" />
+    <None Include="wwwroot\fonts\Poppins\Poppins-Medium.woff2" />
+    <None Include="wwwroot\fonts\Poppins\Poppins-Regular.woff2" />
+    <None Include="wwwroot\fonts\Poppins\Poppins-SemiBold.woff2" />
+    <None Include="wwwroot\fonts\Poppins\Poppins-Thin.woff2" />
+    <None Include="wwwroot\fonts\Roboto\Roboto-Black.woff2" />
+    <None Include="wwwroot\fonts\Roboto\Roboto-Bold.woff2" />
+    <None Include="wwwroot\fonts\Roboto\Roboto-Light.woff2" />
+    <None Include="wwwroot\fonts\Roboto\Roboto-Medium.woff2" />
+    <None Include="wwwroot\fonts\Roboto\Roboto-Regular.woff2" />
+    <None Include="wwwroot\images\logo-dark.svg" />
+    <None Include="wwwroot\images\logo-mini.svg" />
+    <None Include="wwwroot\images\logo-white.svg" />
+    <None Include="wwwroot\images\logo.svg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.7.11" />
     <PackageReference Include="HangFire.Core" Version="1.7.11" />
@@ -18,6 +37,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="18.2.0.47" />
   </ItemGroup>
 
   <ItemGroup>
@@ -25,6 +45,15 @@
     <ProjectReference Include="..\DAL\DAL.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
     <ProjectReference Include="..\Service\Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="EPPlus">
+      <HintPath>C:\Users\Administrator\Downloads\Compressed\PdfReport.Core-master\PdfReport.Core-master\PdfRpt.Core.SampleWebApp\bin\Debug\netcoreapp3.1\EPPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="PdfRpt.Core">
+      <HintPath>C:\Users\Administrator\Downloads\Compressed\PdfReport.Core-master\PdfReport.Core-master\PdfRpt.Core.SampleWebApp\bin\Debug\netcoreapp3.1\PdfRpt.Core.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
