--- a/Accounting/appsettings.json
+++ b/Accounting/appsettings.json
@@ -18,5 +18,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "BaseApiUrl": "https://localhost:44381",
   "AllowedHosts": "*"
 }
