Implement change products price to new currency prices by USD

--- a/Accounting/appsettings.json
+++ b/Accounting/appsettings.json
@@ -18,6 +18,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "BaseApiUrl": "https://localhost:44381",
+  "BaseApiUrl": "http://localhost:52762",
   "AllowedHosts": "*"
 }
